visual studio build

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -12,10 +12,16 @@ set (hdr
   scanner_iface.h 
   scanner.hpp)
 
+if (WINDOWS)
+	set (RE2C ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/re2c-bin.exe)
+else ()
+	set (RE2C ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/re2c-bin)
+endif ()
+
 ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/scanner.re2c.c
-   COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/re2c-bin -cbs -o ${CMAKE_CURRENT_BINARY_DIR}/scanner.re2c.c ${CMAKE_CURRENT_SOURCE_DIR}/scanner.re2c
-   DEPENDS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/re2c-bin ${CMAKE_CURRENT_SOURCE_DIR}/scanner.re2c
+   COMMAND ${RE2C} -cbs -o ${CMAKE_CURRENT_BINARY_DIR}/scanner.re2c.c ${CMAKE_CURRENT_SOURCE_DIR}/scanner.re2c
+   DEPENDS re2c-bin ${CMAKE_CURRENT_SOURCE_DIR}/scanner.re2c
    )
 
 
