--- a/src/tools/re2c/CMakeLists.txt
+++ b/src/tools/re2c/CMakeLists.txt
@@ -169,4 +169,8 @@ set (src
 include_directories (${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 add_definitions (-DHAVE_CONFIG_H)
 
+if (MSVC)
+	add_definitions (-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_DEPRECATE)
+endif ()
+
 add_executable (re2c-bin ${src})
