lemon parser added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ link_directories (${ONYX_LIBS_PATH})
 # -----------------------------------------------------------------------------
 set (modules
   tools/re2c
+  tools/lemon
   parser
 )
 
