--- a/src/datascript/CMakeLists.txt
+++ b/src/datascript/CMakeLists.txt
@@ -2,17 +2,14 @@ set (scanner_generated ${CMAKE_CURRENT_BINARY_DIR}/scanner.re2c.c)
 set (scanner_input ${CMAKE_CURRENT_SOURCE_DIR}/scanner/scanner.re2c)
 
 set (scanner_src 
-  scanner/tokens.cpp 
-  scanner/io.cpp
-  scanner/scanner_iface.c
   scanner/lexer.cpp
+  scanner/lexeme.cpp
   ${scanner_generated}
   )
 
 set (scanner_hdr 
   scanner/tokens.h 
-  scanner/io.hpp 
-  scanner/scanner_iface.h 
+  scanner/lexeme.hpp
   scanner/lexer.hpp)
 # -------------------------------------------------
 set (libscanner_src
