--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,8 +58,8 @@ set (ONYX_SRC        ${CMAKE_SOURCE_DIR}/src)
 set (ONYX_DEFINITIONS  -D_REENTRANT)
 
 
-set (ONYX_INCLUDE ${ONYX_SRC} ${SDL_HOME}/include/SDL2)
-set (ONYX_LIBS_PATH ${SDL_HOME}/lib)
+set (ONYX_INCLUDE ${ONYX_SRC})
+set (ONYX_LIBS_PATH)
 
 set (ONYX_CORE_LIBS )
 
